--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Dungeons and Dragons Character Generator</title>
 </head>
 <body>
+    <div class="wrapper">
+        <header>
+          <h1>Character Generator</h1>
+        </header>
+        <div class="card">
+          <div class="card-header">
+            <h2>Create your own DnD Character Here!</h2>
+          </div>
+          <div class="card-body">
+            <textarea
+              readonly
+              id="password"
+              placeholder="Your Charater Name"
+              aria-label="Generated Character"
+            ></textarea>
+          </div>
+          <div class="card-footer">
+            <button id="generate" class="btn">Generate Character</button>
+          </div>
+        </div>
+      </div>
+      <script src="Assets/script.js"></script>
     
 </body>
 </html>
