--- a/index.html
+++ b/index.html
@@ -11,25 +11,22 @@
     <div class="wrapper">
         <header>
           <h1>Character Generator</h1>
+          <p>This application can be used to help you develop your very own DnD Character!</p>
+          <p>Use one of the bottons below to begin, you can build your own or we can generate one for you.</p>
         </header>
         <div class="card">
           <div class="card-header">
             <h2>Create your own DnD Character Here!</h2>
           </div>
-          <div class="card-body">
-            <textarea
-              readonly
-              id="password"
-              placeholder="Your Charater Name"
-              aria-label="Generated Character"
-            ></textarea>
-          </div>
+
+        
           <div class="card-footer">
             <button id="generate" class="btn">Generate Character</button>
+            <button id="generate" class="btn">Build Your Own</button>
           </div>
         </div>
       </div>
-      <script src="Assets/script.js"></script>
+      <script src="script.js"></script>
     
 </body>
 </html>
