--- a/index.html
+++ b/index.html
@@ -10,26 +10,31 @@
 <body>
     <div class="wrapper">
         <header>
-          <h1>Character Generator</h1>
+          <h1>Create your own Dungeons and Dragons Character!</h1>
         </header>
-        <div class="card">
-          <div class="card-header">
-            <h2>Create your own DnD Character Here!</h2>
-          </div>
+        <div>
+          <p class="disc">  This application can be used to help you create a Dungeons and Dragons character! Already have and idea? Click the "Build your own" button. Need an idea from scratch? Click the "Generate Character" button. </p>
+          <h2>Character Conjuration</h2>
+        </div>
+        <div class="card"> 
+          <div class="card-header"> </div>
           <div class="card-body">
-            <textarea
-              readonly
-              id="password"
-              placeholder="Your Charater Name"
-              aria-label="Generated Character"
-            ></textarea>
-          </div>
-          <div class="card-footer">
-            <button id="generate" class="btn">Generate Character</button>
+            <a id="generate-link" href="blank"> 
+              <p class="link-text">Generate Random</p>
+              <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice"> 
+            </a>
+            <a id="build-link" href="blank">
+                <p class="link-text">Build your own</p>
+              <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice">
+             </a>
           </div>
         </div>
-      </div>
-      <script src="Assets/script.js"></script>
+          <div>
+            <p class="mission"> Our mission is to make Dungeons and Dragons more accessable to new or more experienced players. This application can be used by a player to get new ideas and switch up the rhythm of your normal playing habits or it can be used by the DM to create interested and complex NPCs on the spot that can be an unforgettable asset to your players! </p>
+          </div>
+        
+      <script src="assets/script.js"></script>
     
 </body>
+<footer></footer>
 </html>
