--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
     <title>Dungeons and Dragons Character Generator</title>
 </head>
 <body>
-    <div class="wrapper">
+    <div>
         <header>
           <h1>Create your own Dungeons and Dragons Character!</h1>
         </header>
         <div>
           <p class="disc">  This application can be used to help you create a Dungeons and Dragons character! Already have and idea? Click the "Build your own" button. Need an idea from scratch? Click the "Generate Character" button. </p>
-          <h2>Character Conjuration</h2>
         </div>
         <div class="card"> 
-          <div class="card-header"> </div>
           <div class="card-body">
-            <a id="generate-link" href="blank"> 
+            <img id="dragon1" src="./assets/dragon (1).png">
+            <div class="link-items">
+            <a id="generate-link" href="blank">  
               <p class="link-text">Generate Random</p>
               <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice"> 
             </a>
@@ -27,14 +27,27 @@
                 <p class="link-text">Build your own</p>
               <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice">
              </a>
-          </div>
+            </div>
+             <img id="dragon2" src="./assets/dragon (1).png">
+            </div>
         </div>
           <div>
             <p class="mission"> Our mission is to make Dungeons and Dragons more accessable to new or more experienced players. This application can be used by a player to get new ideas and switch up the rhythm of your normal playing habits or it can be used by the DM to create interested and complex NPCs on the spot that can be an unforgettable asset to your players! </p>
           </div>
-        
+        </div>
       <script src="assets/script.js"></script>
     
 </body>
-<footer></footer>
+<footer>
+  <div>
+    <div class="contact-us">
+    <p>If you have any suggestions or questions contact us at:</p>
+    <a href="mailto: ExampleEmail@gmail.com" target="_blank">ExampleEmail@gmail.com</a>
+    </div>
+    <div class="credits">
+      <p>Credits</p>
+      <p>This application is made through efforts contributed by: Andrew Simpkins, Lilia Hernandez, Michael Lomax,  and Ricardo Garcia </p>
+    </div>
+  </div>
+</footer>
 </html>
