fixed alignment and added hover effects on all links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div>
     <div class="contact-us">
     <p>If you have any suggestions or questions contact us at:</p>
-    <a href="mailto: ExampleEmail@gmail.com" target="_blank">ExampleEmail@gmail.com</a>
+    <a id="email-hover" href="mailto: ExampleEmail@gmail.com" target="_blank">ExampleEmail@gmail.com</a>
     </div>
     <div class="credits">
       <p>Credits</p>
