--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           <div class="card-body">
             <img id="dragon1" src="./assets/dragon (1).png">
             <div class="link-items">
-            <a id="generate-link" href="./index files/generator-index.html">  
+            <a id="generate-link" href="generator-index.html">  
               <p class="link-text">Generate Random</p>
               <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice"> 
             </a>
-            <a id="build-link" href="./index files/build-index.html">
+            <a id="build-link" href="build-index.html">
                 <p class="link-text">Build your own</p>
               <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice">
              </a>
