--- a/build-index.html
+++ b/build-index.html
@@ -4,23 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=\, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <link rel="stylesheet" href="build.css"/>
     <title>Build Your Own Character</title>
-</head>
+  </head>
 <body>
     <div>
         <header>
-            <h1>Build Your Own DnD Character Here</h1>
+            <h1>Character Conjuration</h1>
         </header>
         <div>
-            <p class="disc">Add your selections from the drop down lists in order to build a DnD Character</p>
-        </div>
-        <div class="card">
-            <div class="card-body"> 
-                <img id="dragon1" src="./assets/dragon (1).png">
-                <img id="dragon2" src="./assets/dragon (1).png">
-    
+            <p>Add your selections from the drop down lists in order to build a DnD Character</p>
         </div>
     </div>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 </html>
