--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet" href="cover.css" />
     <title>Dungeons and Dragons Character Generator</title>
 </head>
 <body>
@@ -17,26 +19,26 @@
         </div>
         <div class="card"> 
           <div class="card-body">
-            <img id="dragon1" src="./assets/dragon (1).png">
+            <img id="dragon1" class="hide-on-med-and-down responsive-img" src="./assets/dragon (1).png">
             <div class="link-items">
-            <a id="generate-link" href="generator-index.html">  
+            <a class="hoverable" id="generate-link" href="build-index.html">  
               <p class="link-text">Generate Random</p>
-              <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice"> 
+              <img src="./assets/PFDD003-DnD-D20-Pin.jpg"  alt="Image of a 20 sided dice"> 
             </a>
-            <a id="build-link" href="build-index.html">
+            <a class="hoverable" id="build-link" href="build-index.html">
                 <p class="link-text">Build your own</p>
               <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice">
              </a>
             </div>
-             <img id="dragon2" src="./assets/dragon (1).png">
+             <img id="dragon2" class="hide-on-med-and-down responsive-img" src="./assets/dragon (1).png">
             </div>
         </div>
           <div>
             <p class="mission"> Our mission is to make Dungeons and Dragons more accessable to new or more experienced players. This application can be used by a player to get new ideas and switch up the rhythm of your normal playing habits or it can be used by the DM to create interested and complex NPCs on the spot that can be an unforgettable asset to your players! </p>
           </div>
         </div>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
       <script src="assets/script.js"></script>
-    
 </body>
 <footer>
   <div>
@@ -46,7 +48,7 @@
     </div>
     <div class="credits">
       <p>Credits</p>
-      <p>This application is made through efforts contributed by: Andrew Simpkins, Lilia Hernandez, Michael Lomax,  and Ricardo Garcia </p>
+      <p>This application is made through efforts contributed by: Andrew Simpkins, Lilia Hernandez, Michael Lomax, and Ricardo Garcia </p>
     </div>
   </div>
 </footer>
