--- a/2ndpage.html
+++ b/2ndpage.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="2ndstyle.css" />
     <title>Character Creation</title>
 </head>
@@ -59,5 +61,6 @@
         <p></p>
         <p></p>
     </div>
+    <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 </html>
