--- a/2ndpage.html
+++ b/2ndpage.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="2ndstyle.css" />
-    <title>Character Creation</title>
-</head>
-<body>
-    <div class="Input">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="2ndstyle.css" />
+        <title>Character Creation</title>
+    </head>
+
+    <body>
+        <head>
+            <h1>Customize DnD Character</h1>
+            <p>Customize Character!</p>
+        </head>
+</body>
+
+    <body>
+        <div class="Input">
         <input type="text" id="name" name="name" class="input-area" value="Input Character Name here or leave blank for randomized name">
-        <select name="Class" id="Class" class="input-area">
+            <select name="Class" id="Class" class="input-area">
             <option value="Barbarian">Barbarian</option>
             <option value="Bard">Bard</option>
             <option value="Cleric">Cleric</option>
