added second buil html

--- a/cover.html
+++ b/cover.html
@@ -1,55 +1,89 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
     <link rel="stylesheet" href="cover.css" />
     <title>Dungeons and Dragons Character Generator</title>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <header>
-          <h1>Create your own Dungeons and Dragons Character!</h1>
-        </header>
-        <div>
-          <p class="disc">  This application can be used to help you create a Dungeons and Dragons character! Already have and idea? Click the "Build your own" button. Need an idea from scratch? Click the "Generate Character" button. </p>
-        </div>
-        <div class="card"> 
-          <div class="card-body">
-            <img id="dragon1" class="hide-on-med-and-down responsive-img" src="./assets/dragon (1).png">
-            <div class="link-items">
-            <a class="hoverable" id="generate-link" href="2ndpage.html">  
+      <header>
+        <h1>Create your own Dungeons and Dragons Character!</h1>
+      </header>
+      <div>
+        <p class="disc">
+          This application can be used to help you create a Dungeons and Dragons
+          character! Already have and idea? Click the "Build your own" button.
+          Need an idea from scratch? Click the "Generate Character" button.
+        </p>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <img
+            id="dragon1"
+            class="hide-on-med-and-down responsive-img"
+            src="./assets/dragon (1).png"
+          />
+          <div class="link-items">
+            <a class="hoverable" id="generate-link" href="2ndpage.html">
               <p class="link-text">Generate Random</p>
-              <img src="./assets/PFDD003-DnD-D20-Pin.jpg"  alt="Image of a 20 sided dice"> 
+              <img
+                src="./assets/PFDD003-DnD-D20-Pin.jpg"
+                alt="Image of a 20 sided dice"
+              />
             </a>
             <a class="hoverable" id="build-link" href="2ndpage.html">
-                <p class="link-text">Build your own</p>
-              <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice">
-             </a>
-            </div>
-             <img id="dragon2" class="hide-on-med-and-down responsive-img" src="./assets/dragon (1).png">
-            </div>
-        </div>
-          <div>
-            <p class="mission"> Our mission is to make Dungeons and Dragons more accessable to new or more experienced players. This application can be used by a player to get new ideas and switch up the rhythm of your normal playing habits or it can be used by the DM to create interested and complex NPCs on the spot that can be an unforgettable asset to your players! </p>
+              <p class="link-text">Build your own</p>
+              <img
+                src="./assets/PFDD003-DnD-D20-Pin.jpg"
+                alt="Image of a 20 sided dice"
+              />
+            </a>
           </div>
+          <img
+            class="hide-on-med-and-down responsive-img"
+            src="./assets/dragon (1).png"
+          />
         </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <script src="assets/script.js"></script>
-</body>
-<footer>
-  <div>
-    <div class="contact-us">
-    <p>If you have any suggestions or questions contact us at:</p>
-    <a id="email-hover" href="mailto: ExampleEmail@gmail.com" target="_blank">ExampleEmail@gmail.com</a>
+      </div>
+      <div>
+        <p class="mission">
+          Our mission is to make Dungeons and Dragons more accessable to new or
+          more experienced players. This application can be used by a player to
+          get new ideas and switch up the rhythm of your normal playing habits
+          or it can be used by the DM to create interested and complex NPCs on
+          the spot that can be an unforgettable asset to your players!
+        </p>
+      </div>
     </div>
-    <div class="credits">
-      <p>Credits</p>
-      <p>This application is made through efforts contributed by: Andrew Simpkins, Lilia Hernandez, Michael Lomax, and Ricardo Garcia </p>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./script.js"></script>
+  </body>
+  <footer>
+    <div>
+      <div class="contact-us">
+        <p>If you have any suggestions or questions contact us at:</p>
+        <a id="email-hover" href="mailto: ExampleEmail@gmail.com"
+          >ExampleEmail@gmail.com</a
+        >
+      </div>
+      <div class="credits">
+        <p>Credits</p>
+        <p>
+          This application is made through efforts contributed by: Andrew
+          Simpkins, Lilia Hernandez, Michael Lomax, and Ricardo Garcia
+        </p>
+      </div>
     </div>
-  </div>
-</footer>
+  </footer>
 </html>
