--- a/cover.html
+++ b/cover.html
@@ -21,7 +21,7 @@
           <div class="card-body">
             <img id="dragon1" class="hide-on-med-and-down responsive-img" src="./assets/dragon (1).png">
             <div class="link-items">
-            <a class="hoverable" id="generate-link" href="2ndpage.html">  
+            <a class="hoverable" id="generate-link" href="CharacterCreator.html">  
               <p class="link-text">Generate Random</p>
               <img src="./assets/PFDD003-DnD-D20-Pin.jpg"  alt="Image of a 20 sided dice"> 
             </a>
