--- a/CharacterCreator.html
+++ b/CharacterCreator.html
@@ -16,6 +16,9 @@
     <title>Character Creation</title>
   </head>
   <body>
+    <div class="header">
+      <h1>Character Creation</h1>
+    </div>
     <div class="row">
       <div class="col s12 m6 area">
         <div class="input-field">
