--- a/cover.html
+++ b/cover.html
@@ -35,14 +35,14 @@
             src="./assets/dragon (1).png"
           />
           <div class="link-items">
-            <a class="hoverable" id="generate-link" href="2ndpage.html">
+            <a class="hoverable" id="generate-link" href="CharacterCreator.html">
               <p class="link-text">Generate Random</p>
               <img
                 src="./assets/PFDD003-DnD-D20-Pin.jpg"
                 alt="Image of a 20 sided dice"
               />
             </a>
-            <a class="hoverable" id="build-link" href="2ndpage.html">
+            <a class="hoverable" id="build-link" href="Build.html">
                 <p class="link-text">Build your own</p>
               <img src="./assets/PFDD003-DnD-D20-Pin.jpg" alt="Image of a 20 sided dice">
              </a>
