added java for randomizer, added dragons and fixed page 2

--- a/Build.html
+++ b/Build.html
@@ -143,5 +143,6 @@
         var instances = M.FormSelect.init(elems);
       });
     </script>
+    <script src="./script.js"></script>
   </body>
 </html>
