--- a/cover.html
+++ b/cover.html
@@ -27,35 +27,33 @@
           Need an idea from scratch? Click the "Generate Character" button.
         </p>
       </div>
-      <div class="card">
-        <div class="card-body">
+      <section class="card">
           <img
             id="dragon1"
-            class="hide-on-med-and-down responsive-img"
+            class="hide-on-med-and-down responsive"
             src="./assets/dragon (1).png"
           />
-          <div class="link-items">
-            <a class="hoverable" id="generate-link" href="2ndpage.html">
-              <p class="link-text">Generate Random</p>
-              <img
-                src="./assets/PFDD003-DnD-D20-Pin.jpg"
-                alt="Image of a 20 sided dice"
-              />
-            </a>
-            <a class="hoverable" id="build-link" href="2ndpage.html">
-              <p class="link-text">Build your own</p>
-              <img
-                src="./assets/PFDD003-DnD-D20-Pin.jpg"
-                alt="Image of a 20 sided dice"
-              />
-            </a>
-          </div>
-          <img
-            class="hide-on-med-and-down responsive-img"
-            src="./assets/dragon (1).png"
-          />
+        <div class="col s12 link-items">
+          <a class="hoverable" id="generate-link" href="CharacterCreator.html">
+            <p class="link-text">Generate Random</p>
+            <img
+              src="./assets/PFDD003-DnD-D20-Pin.jpg"
+              alt="Image of a 20 sided dice"
+            />
+          </a>
+          <a class="hoverable" id="build-link" href="Build.html">
+            <p class="link-text">Build your own</p>
+            <img
+              src="./assets/PFDD003-DnD-D20-Pin.jpg"
+              alt="Image of a 20 sided dice"
+            />
+          </a>
         </div>
-      </div>
+          <img
+            class="hide-on-med-and-down responsive"
+            src="./assets/dragon (1).png"
+          />
+      </section>
       <div>
         <p class="mission">
           Our mission is to make Dungeons and Dragons more accessable to new or
@@ -66,8 +64,6 @@
         </p>
       </div>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./script.js"></script>
   </body>
   <footer>
     <div>
