added a whole lot of java

--- a/CharacterCreator.html
+++ b/CharacterCreator.html
@@ -118,7 +118,7 @@
       </div>
       <div class="col s12 sheet">
         <div class="responsive right">
-          <img src="assets/PFDD003-DnD-D20-Pin.jpg" alt="character display" />
+          <img id="charImg" src="assets/PFDD003-DnD-D20-Pin.jpg" alt="character display" />
         </div>
         <div>
           <p id="namePop">Name</p>
