added name API and got it to display properly

--- a/CharacterCreator.html
+++ b/CharacterCreator.html
@@ -17,109 +17,14 @@
   </head>
   <body>
     <div>
-      <div class="col s12 m6 area">
-        <div class="input-field">
-          <input
-            placeholder="Character Name"
-            id="Name"
-            type="text"
-            class="validate"
-          />
-          <label class="black-text">Character Name</label>
-        </div>
-
-        <div class="input-field">
-          <select>
-            <option value="" disabled selected>Choose your option</option>
-            <option value="Barbarian">Barbarian</option>
-            <option value="Bard">Bard</option>
-            <option value="Cleric">Cleric</option>
-            <option value="Druid">Druid</option>
-            <option value="Fighter">Fighter</option>
-            <option value="Monk">Monk</option>
-            <option value="Paladin">Paladin</option>
-            <option value="Ranger">Ranger</option>
-            <option value="Rogue">Rogue</option>
-            <option value="Sorcerer">Sorcerer</option>
-            <option value="Warlock">Warlock</option>
-            <option value="Wizard">Wizard</option>
-          </select>
-          <label class="black-text">Class</label>
-        </div>
-
-        <div class="input-field">
-          <select>
-            <option value="" disabled selected>Choose your option</option>
-            <option value="Male">Masculine</option>
-            <option value="Female">Feminine</option>
-          </select>
-          <label class="black-text">Gender Identity</label>
-        </div>
-
-        <div class="input-field">
-          <select>
-            <option value="" disabled selected>Choose your option</option>
-            <option value="Chaotic Evil">Chaotic Evil</option>
-            <option value="Chaotic Good">Chaotic Good</option>
-            <option value="Chaotic Neutral">Chaotic Neutral</option>
-            <option value="Lawful Evil">Lawful Evil</option>
-            <option value="Lawful Good">Lawful Good</option>
-            <option value="Lawful Neutral">Lawful Neutral</option>
-            <option value="Neutral">Neutral</option>
-            <option value="Neutral Evil">Neutral Evil</option>
-            <option value="Neutral Good">Neutral Good</option>
-          </select>
-          <label class="black-text">Alignment</label>
-        </div>
-
-        <div class="input-field">
-          <select>
-            <option value="" disabled selected>Choose your option</option>
-            <option value="Dragonborn">Dragonborn</option>
-            <option value="Dwarf">Dwarf</option>
-            <option value="Elf">Elf</option>
-            <option value="Gnome">Gnome</option>
-            <option value="Half-Elf">Half-Elf</option>
-            <option value="Half-Orc">Half-Orc</option>
-            <option value="Halfling">Halfling</option>
-            <option value="Human">Human</option>
-            <option value="Tiefling">Tiefling</option>
-          </select>
-          <label class="black-text">Race</label>
-        </div>
-
-        <div class="input-field">
-          <select>
-            <option value="" disabled selected>Choose your option</option>
-            <option value="Young">Young</option>
-            <option value="Middle-Aged">Middle Aged</option>
-            <option value="Elderly">Elderly</option>
-          </select>
-          <label black-text>Age</label>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            <a class="waves-effect waves-light btn-large button">Submit</a>
-            <a class="waves-effect waves-light btn-large button" id="randomize"
-              >Randomize</a
-            >
-            <a class="waves-effect waves-light btn-large button">Reset</a>
-          </div>
-        </div>
-      </div>
+    <a class="waves-effect waves-light btn-large button" id="randomize">Randomize</a>
     </div>
     <section class="charSec">
-      <div id="greenDragon">
-        <img
-          src="./assets/Ancient-Green-Dragon-PNG-Photos.png"
-          alt="large green dragon"
-        />
-      </div>
       <div class="col s12 sheet">
         <div class="responsive right">
           <img id="charImg" src="assets/PFDD003-DnD-D20-Pin.jpg" alt="character display" />
         </div>
-        <div>
+        <div class="randomItems">
           <p id="namePop">Name</p>
           <p id="agePop">Age</p>
           <p id="genderPop">Gender</p>
