--- a/cover.html
+++ b/cover.html
@@ -23,8 +23,7 @@
       <div>
         <p class="disc">
           This application can be used to help you create a Dungeons and Dragons
-          character! Already have and idea? Click the "Build your own" button.
-          Need an idea from scratch? Click the "Generate Character" button.
+          character! Click the "Generate Random" button to get started!
         </p>
       </div>
       <section class="card">
@@ -36,13 +35,6 @@
         <div class="col s12 link-items">
           <a class="hoverable" id="generate-link" href="CharacterCreator.html">
             <p class="link-text">Generate Random</p>
-            <img
-              src="./assets/PFDD003-DnD-D20-Pin.jpg"
-              alt="Image of a 20 sided dice"
-            />
-          </a>
-          <a class="hoverable" id="build-link" href="Build.html">
-            <p class="link-text">Build your own</p>
             <img
               src="./assets/PFDD003-DnD-D20-Pin.jpg"
               alt="Image of a 20 sided dice"
