--- a/CharacterCreator.html
+++ b/CharacterCreator.html
@@ -16,31 +16,47 @@
     <title>Character Creation</title>
   </head>
   <body>
-    <div>
-    <a class="waves-effect waves-light btn-large button" id="randomize">Randomize</a>
+    <div class="row">
+      <div class="col m12 l6 side">
+        <div class="col l12 link-items">
+          <a class="hoverable" id="generate-link" href="cover.html">
+            <img
+            src="./assets/PFDD003-DnD-D20-Pin.jpg"
+            alt="Image of a 20 sided dice"
+            />
+            <h1>Create your own Dungeons and Dragons Character!</h1>
+          </a>
+        </div>
+        <div class="picture">
+        <img id="charImg" src="assets/PFDD003-DnD-D20-Pin.jpg" alt="character display" />
+        </div>
+      </div>
+
+      <div class="col m12 l6 info">
+        <section class="charSec">
+          <div class="col s12 sheet">
+            <div class="button-center">
+              <a class="waves-effect waves-light btn-large button" id="randomize">Randomize</a>
+            </div>
+            <div class="randomItems">
+              <p id="namePop">Name</p>
+              <p id="agePop">Age</p>
+              <p id="genderPop">Gender</p>
+              <p id="racePop">Race</p>
+              <p id="classPop">Class</p>
+              <p id="alignPop">Alignment</p>
+            </div>
+          </div>
+          <div class="col s12 l12">
+            <img
+              id="redDragon"
+              src="./assets/Dragon-No-Background.png"
+              alt="Large red dragon"
+            />
+          </div>
+        </section>
+      </div>
     </div>
-    <section class="charSec">
-      <div class="col s12 sheet">
-        <div class="responsive right">
-          <img id="charImg" src="assets/PFDD003-DnD-D20-Pin.jpg" alt="character display" />
-        </div>
-        <div class="randomItems">
-          <p id="namePop">Name</p>
-          <p id="agePop">Age</p>
-          <p id="genderPop">Gender</p>
-          <p id="racePop">Race</p>
-          <p id="classPop">Class</p>
-          <p id="alignPop">Alignment</p>
-        </div>
-      </div>
-      <div>
-        <img
-          id="redDragon"
-          src="./assets/Dragon-No-Background.png"
-          alt="Large red dragon"
-        />
-      </div>
-    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
