finished interactive section and made it modile freindly

--- a/cover.html
+++ b/cover.html
@@ -49,7 +49,7 @@
       <div>
         <p class="mission">
           Our mission is to make Dungeons and Dragons more accessable to new or
-          more experienced players. This application can be used by a player to
+           even more experienced players. This application can be used by a player to
           get new ideas and switch up the rhythm of your normal playing habits
           or it can be used by the DM to create interested and complex NPCs on
           the spot that can be an unforgettable asset to your players!
