fixed link going back from second page

--- a/CharacterCreator.html
+++ b/CharacterCreator.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="col l12 link-items">
-      <a class="hoverable" id="generate-link" href="cover.html">
+      <a class="hoverable" id="generate-link" href="index.html">
         <img
           src="./assets/PFDD003-DnD-D20-Pin.jpg"
           alt="Image of a 20 sided dice"
