--- a/index.html
+++ b/index.html
@@ -17,30 +17,39 @@
   </head>
   <body>
     <div>
-        <header>
-          <h1>Create your own Dungeons and Dragons Character!</h1>
-        </header>
-        <div>
-          <p class="disc">  This application can be used to help you create a Dungeons and Dragons character! Already have and idea? Click the "Build your own" button. Need an idea from scratch? Click the "Generate Character" button. </p>
+      <header>
+        <h1>Create your own Dungeons and Dragons Character!</h1>
+      </header>
+      <div>
+        <p class="disc">
+          This application can be used to help you create a Dungeons and Dragons
+          character! Click the "Generate Random" button to get started!
+        </p>
+      </div>
+      <section class="card">
+          <img
+            id="dragon1"
+            class="hide-on-med-and-down responsive"
+            src="./assets/dragon (1).png"
+          />
+        <div class="col s12 link-items">
+          <a class="hoverable" id="generate-link" href="CharacterCreator.html">
+            <p class="link-text">Generate Random</p>
+            <img
+              src="./assets/PFDD003-DnD-D20-Pin.jpg"
+              alt="Image of a 20 sided dice"
+            />
+          </a>
         </div>
-        <div class="card"> 
-          <div class="card-body">
-            <img id="dragon1" class="hide-on-med-and-down responsive-img" src="./assets/dragon (1).png">
-            <div class="link-items">
-            <a class="hoverable" id="generate-link" href="CharacterCreator.html">  
-              <p class="link-text">Generate Random</p>
-              <img src="./assets/PFDD003-DnD-D20-Pin.jpg"  alt="Image of a 20 sided dice"> 
-            </a>
-            </div>
-             <img id="dragon2" class="hide-on-med-and-down responsive-img" src="./assets/dragon (1).png">
-            </div>
-        </div>
-
+          <img
+            class="hide-on-med-and-down responsive"
+            src="./assets/dragon (1).png"
+          />
       </section>
       <div>
         <p class="mission">
           Our mission is to make Dungeons and Dragons more accessable to new or
-          more experienced players. This application can be used by a player to
+           even more experienced players. This application can be used by a player to
           get new ideas and switch up the rhythm of your normal playing habits
           or it can be used by the DM to create interested and complex NPCs on
           the spot that can be an unforgettable asset to your players!
@@ -64,6 +73,5 @@
         </p>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 </html>
